# viasat_interview_1292025

./: .typos.toml  Cargo.toml  README.md
dev/: Cargo.toml
exercises/: README.md
exercises/00_intro/: README.md  intro1.rs
exercises/01_basic/: README.md  basic1.rs  basic2.rs  basic3.rs
exercises/02_intermediate/: README.md  intermediate1.rs  intermediate2.rs
exercises/03_advanced/: README.md  advanced1.rs
exercises/quizzes/: README.md  quiz1.rs
rustlings-macros/: info.toml
solutions/: README.md
solutions/01_basic/: basic1.rs  basic2.rs  basic3.rs
solutions/02_intermediate/: intermediate1.rs  intermediate2.rs
solutions/03_advanced/: advanced1.rs
src/: cmd.rs  dev.rs  exercise.rs  init.rs  main.rs  watch.rs
src/watch/: terminal_event.rs
