[workspace]
exclude = [
  "tests/test_exercises",
  "dev",
]

[workspace.package]
version = "1.0.0"
authors = [
  "Jason Ivey <jason.ivey@viasat.com>",
]
repository = "https://github.com/viasat/interview-rust"
license = "MIT"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9", default-features = false, features = ["std", "parse", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"

[workspace.lints.clippy]
pedantic = "warn"

[package]
name = "viasat-interview"
description = "Minimal Rust exercises for Viasat interview candidates."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords = [
  "exercise",
  "interview",
  "rust",
]
include = [
  "/src/",
  "/exercises/",
  "/README.md",
  "/LICENSE",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
notify = "7.0"
rustlings-macros = { path = "rustlings-macros" }
serde_json = "1.0"
serde.workspace = true
toml.workspace = true

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "1.0", default-features = false, features = ["std", "stdio", "termios"] }

[dev-dependencies]
tempfile = "3.21"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[lints]
workspace = true
