# Don't edit the `bin` list manually! It is updated by `cargo dev update`. This comment line will be stripped in `rustlings init`.
bin = [
  { name = "intro1", path = "../exercises/00_intro/intro1.rs" },
  { name = "intro1_sol", path = "../solutions/00_intro/intro1.rs" },
  { name = "intro2", path = "../exercises/00_intro/intro2.rs" },
  { name = "intro2_sol", path = "../solutions/00_intro/intro2.rs" },
  { name = "basic1", path = "../exercises/01_basic/basic1.rs" },
  { name = "basic1_sol", path = "../solutions/01_basic/basic1.rs" },
  { name = "basic2", path = "../exercises/01_basic/basic2.rs" },
  { name = "basic2_sol", path = "../solutions/01_basic/basic2.rs" },
  { name = "basic3", path = "../exercises/01_basic/basic3.rs" },
  { name = "basic3_sol", path = "../solutions/01_basic/basic3.rs" },
  { name = "intermediate1", path = "../exercises/02_intermediate/intermediate1.rs" },
  { name = "intermediate1_sol", path = "../solutions/02_intermediate/intermediate1.rs" },
  { name = "intermediate2", path = "../exercises/02_intermediate/intermediate2.rs" },
  { name = "intermediate2_sol", path = "../solutions/02_intermediate/intermediate2.rs" },
  { name = "advanced1", path = "../exercises/03_advanced/advanced1.rs" },
  { name = "advanced1_sol", path = "../solutions/03_advanced/advanced1.rs" },
  { name = "quiz1", path = "../exercises/quizzes/quiz1.rs" },
  { name = "quiz1_sol", path = "../solutions/quizzes/quiz1.rs" },
]

[package]
name = "exercises"
edition = "2024"
# Don't publish the exercises on crates.io!
publish = false

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[lints.rust]
# You shouldn't write unsafe code in Rustlings!
unsafe_code = "forbid"
# You don't need unstable features in Rustlings and shouldn't rely on them while learning Rust.
unstable_features = "forbid"
# Dead code warnings can't be avoided in some exercises and might distract while learning.
dead_code = "allow"

[lints.clippy]
# You forgot a `todo!()`!
todo = "forbid"
# This can only happen by mistake in Rustlings.
empty_loop = "forbid"
# No infinite loops are needed in Rustlings.
infinite_loop = "deny"
# You shouldn't leak memory while still learning Rust!
mem_forget = "deny"
# Currently, there are no disallowed methods. This line avoids problems when developing Rustlings.
disallowed_methods = "allow"
